yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
    app: httpserver
  labels:
    app: httpserver
  name: httpserver
spec:
  ports:
  - name: httpserver
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpserver
  type: ClusterIP
