yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  generation: 2
  name: httpserver-ingress
spec:
  rules:
  - host: httpserver.leo.io
    http:
      paths:
      - backend:
          serviceName: httpserver
          servicePort: 8080
        path: /
        pathType: Prefix
